--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-<html>Hello there!</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Assignments Assistance</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+    <div class="container my-5">
+        <h2 class="text-center mb-4">Assignments Assistance</h2>
+
+        <h3 class="mb-3">Sheridan College</h3>
+
+        <h3 class="mb-3">Georgian College</h3>
+        <ul class="list-group mb-3">
+            <li class="list-group-item">
+                <strong>COMP1071 - Linux Network Administration</strong>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Lab 1</li>
+                    <li class="list-group-item">Lab 2</li>
+                    <li class="list-group-item">Lab 3</li>
+                    <li class="list-group-item">Lab 4</li>
+                    <li class="list-group-item">Lab 5</li>
+                    <li class="list-group-item">Lab 6</li>
+                    <li class="list-group-item">Lab 7</li>
+                    <li class="list-group-item">Lab 8</li>
+                    <li class="list-group-item">Lab 9</li>
+                    <li class="list-group-item">Lab 10</li>
+                </ul>
+            </li>
+            <li class="list-group-item">
+                <strong>COMP1009 - The Mainframe Environment - 01</strong>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Lab 1-4</li>
+                    <li class="list-group-item">Assignment 1 and 2</li>
+                </ul>
+            </li>
+        </ul>
+
+        <p class="text-center">
+            DM me via WhatsApp for help: 
+            <a href="https://wa.me/254110096075?text=assignmentsAssistance" class="btn btn-success">Click here</a>
+        </p>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
