--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Assignments Assistance for Sheridan and Georgian College. COMP1071, COMP1009 labs and assignments support.">
     <meta name="keywords" content="Assignments Assistance, Sheridan College, Georgian College, COMP1071, COMP1009, Linux, Mainframe, Labs,PROG32356 .NET Technologies using C#">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Dennis Mutuku">
     <meta name="robots" content="index, follow">
     <title>Assignments Assistance</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
