--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Lab 1-4</li>
                     <li class="list-group-item">Assignment 1 and 2</li>
+                     <li class="list-group-item">Sample Grades<imgsrc="Grades/grades_mainframe.jpeg"></img></li>
+                    
                 </ul>
                 
             </li>
