--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get professional assignments assistance for Sheridan and Georgian College courses. Support for COMP1071, COMP1009, PROG32356, Cloud Computing, PowerShell, and more.">
-    <meta name="keywords" content="Assignments Assistance, Sheridan College, Georgian College, COMP1071, COMP1009, Linux, Mainframe, Labs, PROG32356, .NET Technologies, Cloud Computing, PowerShell, Windows Server">
+    <meta name="keywords" content="COMP2138 Windows Server and PowerShell - 01,Assignments Assistance,COMP2131 Cloud Computing , Sheridan College, Georgian College, COMP1071, COMP1009, Linux, Mainframe, Labs, COMP1009 The Mainframe Environment - 01,PROG32356, .NET Technologies, Cloud Computing, PowerShell, Windows Server">
     <meta name="author" content="">
     <meta name="robots" content="index, follow">
     <title>Assignments Assistance</title>
