--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li class="list-group-item">
                 <strong>COMP1009 - The Mainframe Environment - 01</strong>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Lab 1-4</li>
+                    <li class="list-group-item">Lab 1-7</li>
                     <li class="list-group-item">Assignment 1 and 2</li>
                     <li class="list-group-item">
                         Sample Grades
@@ -53,7 +53,7 @@
             <li class="list-group-item">
                 <strong>COMP2131 - Cloud Computing - 01</strong>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Module 1 to 14</li>
+                    <li class="list-group-item">Module 1 to 16</li>
                     <li class="list-group-item">
                         Sample Grades
                         <img src="Grades/grades_cloudComputing.jpeg" alt="Cloud Computing Grades" class="img-fluid mt-2">
@@ -63,8 +63,8 @@
             <li class="list-group-item">
                 <strong>COMP2138 - Windows Server and PowerShell</strong>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Lab 1-4</li>
-                    <li class="list-group-item">Assignment 1 and 2</li>
+                
+                    <li class="list-group-item">Assignment 1 to 11</li>
                     <li class="list-group-item">
                         Sample Grades
                         <img src="Grades/grades_powershel.jpeg" alt="PowerShell Grades" class="img-fluid mt-2">
