--- a/index.html
+++ b/index.html
@@ -2,105 +2,144 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Get professional assignments assistance for Sheridan and Georgian College courses. Support for COMP1071, COMP1009, PROG32356, Cloud Computing, PowerShell, and more.">
-    <meta name="keywords"
-        content="COMP2138 Windows Server and PowerShell - 01,Assignments Assistance,COMP2131 Cloud Computing , Sheridan College, Georgian College, COMP1071, COMP1009, Linux, Mainframe, Labs, COMP1009 The Mainframe Environment - 01,PROG32356, .NET Technologies, Cloud Computing, PowerShell, Windows Server">
-    <meta name="author" content="">
-    <meta name="robots" content="index, follow">
-    <title>Assignments Assistance</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Assignments Assistance | Sheridan & Georgian College Courses</title>
+
+  <!-- ✅ SEO Meta -->
+  <meta name="description"
+    content="Get professional assignments assistance for Sheridan and Georgian College courses including Cloud Computing, PowerShell, .NET, Java, Linux, Mainframe, Data Structures, Security, and more." />
+
+  <meta name="keywords"
+    content="Assignments Assistance, Sheridan College, Georgian College, COMP1071 Linux Network Administration, COMP1009 Mainframe Environment, COMP2131 Cloud Computing, COMP2138 Windows Server and PowerShell, PROG32356 .NET Technologies, PROG20799 Data Structures in C, PROG25211 AI and ML Python, SYST17796 Software Design, SYST24444 Mobile Web Apps, DBAS32100 Database Management, INFO24178 Computer & Network Security, PROG32758 Enterprise Java, SYST10199 Web Programming, DBAS27198 Database Design, PROG23863 OOP Java, PSYC19231G Forensic Psychology, SYST15123 Linux OS, TELE20483 Cloud Enabled Networks, COMM13729 Technical Communication, MATH18584 Computer Math Fundamentals, POLI16367G Understanding Politics, PROG12583 Programming Foundations Python, SYST10049 Web Development, TELE13167 Data Communication, Sheridan, Georgian, Assignments Help, Labs Assistance, Programming Help" />
+
+  <meta name="author" content="Assignments Assistance" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- ✅ Open Graph -->
+  <meta property="og:title" content="Assignments Assistance | Sheridan & Georgian College Courses" />
+  <meta property="og:description"
+    content="Need help with Sheridan or Georgian College assignments? Assistance for COMP1071, COMP1009, Cloud Computing, PowerShell, .NET, Java, and more." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://mutumbutuku.github.io/" />
+  <meta property="og:image" content="https://mutumbutuku.github.io/Grades/grades_cloudComputing.jpeg" />
+  <meta property="og:locale" content="en_US" />
+
+  <!-- ✅ Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Assignments Assistance | Sheridan & Georgian College Courses" />
+  <meta name="twitter:description"
+    content="Get professional help with assignments for Sheridan & Georgian College courses — COMP1071, PowerShell, .NET, Cloud Computing, Java, Linux, and more." />
+  <meta name="twitter:image" content="https://mutumbutuku.github.io/Grades/grades_powershel.jpeg" />
+
+  <!-- ✅ Canonical -->
+  <link rel="canonical" href="https://mutumbutuku.github.io/" />
+
+  <!-- ✅ JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "EducationalOrganization",
+    "name": "Assignments Assistance",
+    "url": "https://mutumbutuku.github.io/",
+    "description": "Assignments Assistance offers support for Sheridan and Georgian College courses such as Cloud Computing, PowerShell, .NET Technologies, Java, and more.",
+    "sameAs": [
+      "https://wa.me/254780986757?text=assignmentsAssistance"
+    ],
+    "serviceType": "College Assignment Assistance",
+    "areaServed": {
+      "@type": "Place",
+      "name": "Canada"
+    },
+    "offers": {
+      "@type": "Service",
+      "name": "Assignment and Lab Help",
+      "description": "Assistance for Sheridan and Georgian College courses: COMP1071, COMP1009, COMP2131, COMP2138, PROG32356, and related programming and cloud labs."
+    }
+  }
+  </script>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div class="container my-5">
-        <h1 class="text-center text-primary mb-4">Assignments Assistance</h1>
+  <div class="container my-5">
+    <h1 class="text-center text-primary mb-4">Assignments Assistance</h1>
 
+    <h3 class="h5 text-primary mb-3">Courses</h3>
+    <ul class="list-group mb-4">
+      <li class="list-group-item">
+        <div class="mt-2 d-flex flex-wrap gap-2">
+          <span class="badge bg-primary">HIST 14998G — Modern War: A Global History</span>
+          <span class="badge bg-secondary">SYST 28951 — Systems Dev. Methodologies</span>
+          <span class="badge bg-primary">ECON 22358G — Macroeconomics</span>
+          <span class="badge bg-secondary">SYST 35300 — Hybrid Mobile Apps</span>
+          <span class="badge bg-primary">INFO 20172 — IT Project Manage Using PMP</span>
+          <span class="badge bg-secondary">PROG 20799 — Data Structures in C</span>
+          <span class="badge bg-primary">PROG 25211 — AI and ML – Python</span>
+          <span class="badge bg-secondary">PROG 32356 — .Net Technologies using C#</span>
+          <span class="badge bg-primary">SYST 17796 — Software Design Fundamentals</span>
+          <span class="badge bg-secondary">SYST 24444 — Mobile Web-Based Applic Develp</span>
+          <span class="badge bg-primary">DBAS 32100 — Database Management</span>
+          <span class="badge bg-secondary">INFO 24178 — Computer &amp; Network Security</span>
+          <span class="badge bg-primary">PROG 32758 — Enterprise Java Development</span>
+          <span class="badge bg-secondary">SYST 10199 — Web Programming</span>
+          <span class="badge bg-primary">DBAS 27198 — Database Design &amp; Implement</span>
+          <span class="badge bg-secondary">PROG 23863 — OOP – Java</span>
+          <span class="badge bg-primary">PSYC 19231G — Forensic Psychology</span>
+          <span class="badge bg-secondary">SYST 15123 — OS – Linux</span>
+          <span class="badge bg-primary">TELE 20483 — Cloud Enabled Networks</span>
+          <span class="badge bg-secondary">COMM 13729 — Art of Technical Communication</span>
+          <span class="badge bg-primary">MATH 18584 — Computer Math Fundamentals</span>
+          <span class="badge bg-secondary">POLI 16367G — Understanding Politics and Soc</span>
+          <span class="badge bg-primary">PROG 12583 — Programming Foundations - Pyth</span>
+          <span class="badge bg-secondary">SYST 10049 — Web Development</span>
+          <span class="badge bg-primary">TELE 13167 — Introduction to Data Communica</span>
+          <span class="badge bg-secondary">... and many more courses</span>
+        </div>
+      </li>
+    </ul>
 
-        <h3 class="h5 text-primary mb-3">Courses</h3>
+    <h3 class="h5 text-primary mb-3">Labs</h3>
+    <ul class="list-group mb-4">
+      <li class="list-group-item"><strong>COMP1071 - Linux Network Administration</strong></li>
 
-        <ul class="list-group mb-4">
-            <li class="list-group-item">
-                <div class="mt-2 d-flex flex-wrap gap-2">
-                    <span class="badge bg-primary">HIST 14998G — Modern War: A Global History</span>
-                    <span class="badge bg-secondary">SYST 28951 — Systems Dev. Methodologies</span>
-                    <span class="badge bg-primary">ECON 22358G — Macroeconomics</span>
-                    <span class="badge bg-secondary">SYST 35300 — Hybrid Mobile Apps</span>
-                    <span class="badge bg-primary">INFO 20172 — IT Project Manage Using PMP</span>
-                    <span class="badge bg-secondary">PROG 20799 — Data Structures in C</span>
-                    <span class="badge bg-primary">PROG 25211 — AI and ML – Python</span>
-                    <span class="badge bg-secondary">PROG 32356 — .Net Technologies using C#</span>
-                    <span class="badge bg-primary">SYST 17796 — Software Design Fundamentals</span>
-                    <span class="badge bg-secondary">SYST 24444 — Mobile Web-Based Applic Develp</span>
-                    <span class="badge bg-primary">DBAS 32100 — Database Management</span>
-                    <span class="badge bg-secondary">INFO 24178 — Computer &amp; Network Security</span>
-                    <span class="badge bg-primary">PROG 32758 — Enterprise Java Development</span>
-                    <span class="badge bg-secondary">SYST 10199 — Web Programming</span>
-                    <span class="badge bg-primary">DBAS 27198 — Database Design &amp; Implement</span>
-                    <span class="badge bg-secondary">PROG 23863 — OOP – Java</span>
-                    <span class="badge bg-primary">PSYC 19231G — Forensic Psychology</span>
-                    <span class="badge bg-secondary">SYST 15123 — OS – Linux</span>
-                    <span class="badge bg-primary">TELE 20483 — Cloud Enabled Networks</span>
-                    <span class="badge bg-secondary">COMM 13729 — Art of Technical Communication</span>
-                    <span class="badge bg-primary">MATH 18584 — Computer Math Fundamentals</span>
-                    <span class="badge bg-secondary">POLI 16367G — Understanding Politics and Soc</span>
-                    <span class="badge bg-primary">PROG 12583 — Programming Foundations - Pyth</span>
-                    <span class="badge bg-secondary">SYST 10049 — Web Development</span>
-                    <span class="badge bg-primary">TELE 13167 — Introduction to Data Communica</span>
-                    <!-- many more -->
-                    <span class="badge bg-secondary">... and many more courses</span>
+      <li class="list-group-item">
+        <strong>COMP1009 - The Mainframe Environment - 01</strong>
+        <div class="mt-2">
+          <div>Sample Grades</div>
+          <img src="Grades/grades_mainframe.jpeg" alt="Mainframe Grades" class="img-fluid mt-2" />
+        </div>
+      </li>
 
-                </div>
-            </li>
-        </ul>
-        <h3 class="h5 text-primary mb-3">Labs</h3>
-        <ul class="list-group mb-4">
-            <li class="list-group-item">
-                <strong>COMP1071 - Linux Network Administration</strong>
-            </li>
+      <li class="list-group-item">
+        <strong>COMP2131 - Cloud Computing - 01</strong>
+        <div class="mt-2">
+          <div>Sample Grades</div>
+          <img src="Grades/grades_cloudComputing.jpeg" alt="Cloud Computing Grades" class="img-fluid mt-2" />
+        </div>
+      </li>
 
-            <li class="list-group-item">
-                <strong>COMP1009 - The Mainframe Environment - 01</strong>
-                <div class="mt-2">
-                    <div>Sample Grades</div>
-                    <img src="Grades/grades_mainframe.jpeg" alt="Mainframe Grades" class="img-fluid mt-2">
-                </div>
-            </li>
+      <li class="list-group-item">
+        <strong>COMP2138 - Windows Server and PowerShell</strong>
+        <div class="mt-2">
+          <div>Sample Grades</div>
+          <img src="Grades/grades_powershel.jpeg" alt="PowerShell Grades" class="img-fluid mt-2" />
+        </div>
+      </li>
 
-            <li class="list-group-item">
-                <strong>COMP2131 - Cloud Computing - 01</strong>
-                <div class="mt-2">
-                    <div>Sample Grades</div>
-                    <img src="Grades/grades_cloudComputing.jpeg" alt="Cloud Computing Grades" class="img-fluid mt-2">
-                </div>
-            </li>
+      <li class="list-group-item"><strong>And many more labs...</strong></li>
+    </ul>
 
-            <li class="list-group-item">
-                <strong>COMP2138 - Windows Server and PowerShell</strong>
-                <div class="mt-2">
-                    <div>Sample Grades</div>
-                    <img src="Grades/grades_powershel.jpeg" alt="PowerShell Grades" class="img-fluid mt-2">
-                </div>
-            </li>
-            
+    <p class="text-center">
+      DM me via WhatsApp for help:
+      <a href="https://wa.me/254780986757?text=assignmentsAssistance" class="btn btn-success">Click Here</a>
+    </p>
+  </div>
 
-             <li  class="list-group-item">
-                <!-- and many more -->
-                 <strong>And many more labs...</strong>
-                 
-             </li>
-        </ul>
-
-
-        <p class="text-center">
-            DM me via WhatsApp for help:
-            <a href="https://wa.me/254780986757?text=assignmentsAssistance" class="btn btn-success">Click Here</a>
-        </p>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
