--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     <p class="text-center">
       DM me via WhatsApp for help:
-      <a href="https://wa.me/254780986757?text=assignmentsAssistance" class="btn btn-success">Click Here</a>
+      <a href="https://wa.me/2547110096075?text=Assignments%20assistance" class="btn btn-success">Click Here</a>
     </p>
   </div>
 
